Merged revisions 16299 via svnmerge from https://svn.codehaus.org/mule/branches/mule-2.2.x
........
  r16299 | dirk.olmes | 2009-12-21 13:14:20 +0100 (Mon, 21 Dec 2009) | 1 line
  
  MULE-4679 JettyHttpsFunctionalTestCase fails
........


git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.x@16302 bf997673-6b11-0410-b953-e057580c5b09